--- a/src/makefile
+++ b/src/makefile
@@ -2,7 +2,7 @@ TARGET = a.out #recall
 CXXFLAGS = -Wall -std=C++11 -Wc++11-extensions -lncurses
 CC = g++
 
-OBJFILES = main.o Screen.o Digits.o 
+OBJFILES = main.o Screen.o Digits.o Message.o
 
 $(TARGET): $(OBJFILES)
 	$(CC) -o $(TARGET) $(CXXFLAGS) $(OBJFILES)
@@ -13,6 +13,8 @@ Screen.o: Screen.cpp Screen.h
 	$(CC) -c Screen.cpp
 Digits.o: Digits.cpp Digits.h
 	$(CC) -c Digits.cpp
+Message.o: Message.cpp Message.h
+	$(CC) -c Message.cpp
 
 .PHONY: clean
 clean:
